fixed the add book views

--- a/books.html
+++ b/books.html
@@ -18,6 +18,13 @@
     </header>
     <main>
         <div class='container'>
+          <div class='top-buttons row'>
+            <div class='col s9'>
+            </div>
+            <div class='col s3'>
+              <a href='books/new.html'><button class='orange accent-1 btn'>New Book</button></a>
+            </div>
+          </div>
             <section class='books'>
             </section>
         </div>
