local changes fixed

--- a/books.html
+++ b/books.html
@@ -55,7 +55,7 @@
                             <a class='edit-link' href=''><i class="fa fa-2x fa-pencil-square-o" aria-hidden="true"></i></a>
                         </div>
                         <div class='delete-container'>
-                            <a class='delete-link' href=''><i class="fa fa-2x fa-trash-o" aria-hidden="true"></i></i></a>
+                            <a class='delete-link' href='books/delete.html?id={{this.book_id}}'><i class="fa fa-2x fa-trash-o" aria-hidden="true"></i></i></a>
                         </div>
                     </div>
                   </div>
