--- a/books.html
+++ b/books.html
@@ -52,7 +52,7 @@
                     <div class='col s2 button-container'>
                         <div class='edit-container'>
 
-                            <a class='edit-link' href=''><i class="fa fa-2x fa-pencil-square-o" aria-hidden="true"></i></a>
+                            <a class='edit-link' href='books/edit.html?id={{this.book_id}}'><i class="fa fa-2x fa-pencil-square-o" aria-hidden="true"></i></a>
                         </div>
                         <div class='delete-container'>
                             <a class='delete-link' href='books/delete.html?id={{this.book_id}}'><i class="fa fa-2x fa-trash-o" aria-hidden="true"></i></i></a>
